Domibus 4.2
- Added a job in FS Plugin that cleans orphaned lock files
- Removed password column from both Users and Plugin Users components/lists( as their values were obscured anyway)
- Added Parties functionality to External REST API calls
- Added new component/page in admin console to monitor test connections; integrated the former test component as details page
- Added domibus.monitoring.connection.party.enabled property which specifies the parties for which to monitor the connection (comma-separated list)
- Added domibus.monitoring.connection.cron property which specifies the frequency of test messages sent to monitor the C2-C3 connections
- Filtered out bean scanning of web and ext sub-packages to avoid multiple bean creation.
- Deleted msh-config.xml and moved one bean to spring-context.xml
- Upgrade Tomcat to version 9 and dropped support for Tomcat 8
- Upgrade Wildfly to version 20 and dropped support for Wildfly 12 (incompatibilities in the new Artemis 2.x client API)
- Upgrade MySQL to version 8.0 and dropped support for MySQL version 5
- Upgrade the default MySQL Connector/J bundled inside the full distributions to version 8.0.19
- When caching is active for MSH DispatchClient - Ehcache will ignore size calculations therefore no WARNs will be generated in logs
- Possibility to route JMS messages in the JMS Plugin to specific queues depending on service and action
- Added JDK 11 support
- Added Foreign Servers support in Weblogic
- Add alert for account enabled.
- maxSize attribute defined in payload profile in PMode is taken in account message exchange - maxSize="2147483647" (normal operations) or maxSize="9223372036854775807" for Split&Join operations
- Added a new domain property: domibus.logging.ebms3.error.print (defaults to true) which prints the raw XML response in the logs in case of EBMS3 error on receiver/sender side (if eu.domibus is put at least on ERROR)
- Improved list pending messages performance in WS plugin