@@ -1,0 +1,161 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<db:configuration xmlns:db="http://domibus.eu/configuration" party="blue_gw">
+
+	<mpcs>
+		<mpc name="defaultMpc"
+			 qualifiedName="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/defaultMPC"
+			 enabled="true"
+			 default="true"
+			 retention_downloaded="0"
+			 retention_undownloaded="14400"/>
+		<mpc name="defaultMpc"
+			 qualifiedName="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/defaultMPC"
+			 enabled="true"
+			 default="true"
+			 retention_downloaded="0"
+			 retention_undownloaded="14400"/>
+	</mpcs>
+	<businessProcesses>
+		<roles>
+			<role name="defaultInitiatorRole" 
+					value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/initiator"/>
+			<role name="defaultInitiatorRole"
+				  value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/initiator"/>
+			<role name="defaultResponderRole" 
+					value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/responder"/>
+		</roles>
+		<parties>
+			<partyIdTypes>
+				<partyIdType name="partyTypeUrn" value="urn:oasis:names:tc:ebcore:partyid-type:unregistered"/>
+				<partyIdType name="partyTypeUrn" value="urn:oasis:names:tc:ebcore:partyid-type:unregistered"/>
+			</partyIdTypes>
+			<party name="red_gw"
+				    endpoint="http://localhost:8180/domibus/services/msh">
+				<identifier partyId="domibus-red" partyIdType="partyTypeUrn"/>
+			</party>
+			<party name="red_gw"
+				   endpoint="http://localhost:8180/domibus/services/msh">
+				<identifier partyId="domibus-red" partyIdType="partyTypeUrn"/>
+			</party>
+			<party name="blue_gw" 
+					endpoint="http://localhost:8080/domibus/services/msh">
+				<identifier partyId="domibus-blue" partyIdType="partyTypeUrn"/>
+				<identifier partyId="domibus-blue" partyIdType="partyTypeUrn"/>
+			</party>
+		</parties>
+		<meps>
+			<mep name="oneway" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/oneWay"/>
+			<mep name="oneway" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/oneWay"/>
+			<binding name="push" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/push"/>
+			<binding name="pull" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/pull"/>
+		</meps>
+		<properties>
+			<property name="originalSenderProperty" 
+					key="originalSender" 
+					datatype="string" 
+					required="true"/>
+			<property name="finalRecipientProperty" 
+					key="finalRecipient" 
+					datatype="string" 
+					required="true"/>
+			<propertySet name="eDeliveryPropertySet">
+				<propertyRef property="finalRecipientProperty"/>
+				<propertyRef property="originalSenderProperty"/>
+			</propertySet>
+		</properties>				
+		<payloadProfiles>
+			<payload name="businessContentPayload"
+					cid="cid:message"
+					required="true"
+					mimeType="text/xml"/>
+			<payload name="businessContentAttachment"
+					cid="cid:attachment" 
+					required="false"
+					mimeType="application/octet-stream"/>
+			<payloadProfile name="MessageProfile" maxSize="2147483647">
+				<attachment name="businessContentPayload"/>
+				<attachment name="businessContentAttachment"/>
+			</payloadProfile>
+		</payloadProfiles>
+		<securities>
+			<security name="eDeliveryAS4Policy"
+					policy="eDeliveryAS4Policy.xml"
+					signatureMethod="RSA_SHA256" />	
+		</securities>
+		<errorHandlings>
+			<errorHandling name="demoErrorHandling" 
+					errorAsResponse="true" 
+					businessErrorNotifyProducer="true"
+					businessErrorNotifyConsumer="true"
+					deliveryFailureNotifyProducer="true"/>
+		</errorHandlings>
+		<agreements>
+			<agreement name="agreement1" value="A1" type="T1"/>
+		</agreements>
+		<services>
+			<service name="testService1" value="bdx:noprocess" type="tc1"/>
+			<service name="testService" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/service"/>
+		</services>
+		<actions>
+			<action name="tc1Action" value="TC1Leg1"/>
+			<action name="testAction" value="http://docs.oasis-open.org/ebxml-msg/ebms/v3.0/ns/core/200704/test"/>
+		</actions>
+		<as4>
+			<receptionAwareness name="receptionAwareness" retry="12;4;CONSTANT" duplicateDetection="true"/>
+			<receptionAwareness name="receptionAwarenessTest" retry="0;0;SEND_ONCE" duplicateDetection="true"/>
+			<reliability name="AS4Reliability" nonRepudiation="true" replyPattern="response"/>
+		</as4>
+		<splittingConfigurations>
+			<splitting name="default"
+					   fragmentSize="500"
+					   compression="true"
+					   joinInterval="1440"/>
+		</splittingConfigurations>
+		<legConfigurations>
+			<!--
+			Please add the attribute "splitting"(pointing to a splitting configuration)
+			to a specific leg in case you want to activate splitAndJoin feature
+			-->
+			<legConfiguration name="pushTestcase1tc1Action" 
+					service="testService1" 
+					action="tc1Action" 
+					defaultMpc="defaultMpc" 
+					reliability="AS4Reliability" 
+					security="eDeliveryAS4Policy"
+					receptionAwareness="receptionAwareness" 
+					propertySet="eDeliveryPropertySet"
+					payloadProfile="MessageProfile"
+					errorHandling="demoErrorHandling"
+					compressPayloads="true"/>
+			<legConfiguration name="testServiceCase"
+							  service="testService"
+							  action="testAction"
+							  defaultMpc="defaultMpc"
+							  reliability="AS4Reliability"
+							  security="eDeliveryAS4Policy"
+							  receptionAwareness="receptionAwarenessTest"
+							  propertySet="eDeliveryPropertySet"
+							  payloadProfile="MessageProfile"
+							  errorHandling="demoErrorHandling"
+							  compressPayloads="true"/>
+		</legConfigurations>
+<process name="tc1Process"
+         mep="oneway"
+         binding="push"
+         initiatorRole="defaultInitiatorRole"
+         responderRole="defaultResponderRole">
+	<initiatorParties>
+		<initiatorParty name="blue_gw"/>
+		<initiatorParty name="red_gw"/>
+	</initiatorParties>
+	<responderParties>
+		<responderParty name="blue_gw"/>
+		<responderParty name="red_gw"/>
+	</responderParties>
+	<legs>
+		<leg name="pushTestcase1tc1Action"/>
+		<leg name="testServiceCase"/>
+	</legs>
+</process>
+	</businessProcesses>
+</db:configuration>
